(PC-3337): Change overflow hidden to scroll and fix wording

--- a/src/styles/components/pages/profile/_ProfileMainView.scss
+++ b/src/styles/components/pages/profile/_ProfileMainView.scss
@@ -7,7 +7,7 @@
   width: 100%;
 
   .pm-main {
-    overflow: hidden !important;
+    overflow: scroll !important;
   }
 
   .pm-scroll {
